--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -13,6 +13,7 @@ $mini-heading-font: 'Instrument Sans', 'Arial', sans-serif;
 $fancy-heading-font: 'Instrument Serif', 'Georgia', serif;
 
 // Font size
+$humongous: 2.6rem;
 $hugest: 2.375rem;
 $huge: 2.125rem;
 $prettybig: 1.75rem;
