--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="main-nav" role="navigation" [@revealNavItems]="revealNav">
   <section class="main-nav-section">
-    <a class="main-nav-logo" routerLink="/about" role="banner">
+    <a class="main-nav-logo" routerLink="/work" role="banner">
       Peter Cutler
     </a>
 
