--- a/src/app/work/era-items/fleishman/fleishman.component.html
+++ b/src/app/work/era-items/fleishman/fleishman.component.html
@@ -17,7 +17,7 @@
              alt="{{work.display}}">
         </div>
         <div class="era-detail-item-title">{{work.display}}</div>
-        <div class="era-detail-item-subtitle">{{work.description}}</div>
+        <div class="era-detail-item-subtitle">{{work.subtitle}}</div>
       </div>
     </div>
 
