remove non-ivy deps; finish ng16 update

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="main-nav" role="navigation" [@revealNavItems]="revealNav">
+<nav class="main-nav" role="navigation">
   <section class="main-nav-section">
     <a class="main-nav-logo" routerLink="/work" role="banner">
       Peter Cutler
