--- a/src/app/work/era-items/crowdskout/crowdskout.component.html
+++ b/src/app/work/era-items/crowdskout/crowdskout.component.html
@@ -1,7 +1,7 @@
 <article class="era-detail-content">
   <div class="era-detail-main" [@revealListItems]="revealList">
 
-    <div class="grid-header">
+    <div class="grid-header" id="scrollTop">
       <div class="era-detail-item header">
         From 2015-2017, I worked for Crowdskout as a founding software engineer. I focused on JavaScript engineering, creating a range of components for state management, user segmenting, data analytics, and business insights. Crowdskout was acquired by <a class="basic-link" target="_blank" href="https://murmuration.org">Murmuration</a> in 2018.</div>
     </div>
