--- a/src/app/work/era-items/uw/uw.component.html
+++ b/src/app/work/era-items/uw/uw.component.html
@@ -1,7 +1,7 @@
 <article class="era-detail-content">
   <div class="era-detail-main" [@revealListItems]="revealList">
 
-    <div class="grid-header">
+    <div class="grid-header" id="scrollTop">
       <div class="era-detail-item header">
         From 2017-2019, I studied Human-Computer Interaction at the <a class="basic-link" target="_blank" href="https://murmuration.org">University of Washington</a>, in the department of Human-Centered Design & Engineering. I focused my studies in User Research, graduating with a Masters of Science in 2019.</div>
     </div>
