--- a/src/app/work/era-items/fleishman/fleishman.component.html
+++ b/src/app/work/era-items/fleishman/fleishman.component.html
@@ -1,7 +1,7 @@
 <article class="era-detail-content">
   <div class="era-detail-main" [@revealListItems]="revealList">
 
-    <div class="grid-header">
+    <div class="grid-header" id="scrollTop">
       <div class="era-detail-item header">
         From 2011-2015, I worked for FleishmanHillard creative teams, ultimately leading VOX Global's video & motion design group. During my time with FH companies, I focused on brand strategy, design, and UX. 
       </div>
