--- a/src/app/work/era-items/trakstar/trakstar.component.html
+++ b/src/app/work/era-items/trakstar/trakstar.component.html
@@ -1,7 +1,7 @@
 <article class="era-detail-content">
   <div class="era-detail-main" [@revealListItems]="revealList">
 
-    <div class="grid-header">
+    <div class="grid-header" id="scrollTop">
       <div class="era-detail-item header">
         From 2019-Present, I've worked at <a class="basic-link" target="_blank" href="https://trakstar.com">Trakstar</a>, recently acquired by Mitratech. This page is under construction.
       </div>
