--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,6 +8,22 @@
 // External libraries
 @import 'node_modules/lightgallery/scss/lightgallery';
 
+@import "swiper/css/bundle";
+
+.swiper {
+width: 100%;
+height: 300px;
+margin: 50px auto;
+};
+
+.swiper-slide {
+background: #f1f1f1;
+color: #000;
+text-align: center;
+line-height: 300px;
+};
+
+
 // Core, do not re-order
 @import './resets';
 @import './variables';
