--- a/src/app/work/work-header/work-header.component.html
+++ b/src/app/work/work-header/work-header.component.html
@@ -15,7 +15,7 @@
 
   <section class="work-header-row work-header-reveal">
     <section>
-      <p class="work-tag-header">tags</p>
+      <p class="work-tag-header">areas</p>
       <ul class="work-tags">
         <li class="work-tag" *ngFor="let tag of work.tags">{{tag}}</li>
       </ul>
