--- a/src/app/work/work-items/crowdskout-data-viz/crowdskout-data-viz.component.html
+++ b/src/app/work/work-items/crowdskout-data-viz/crowdskout-data-viz.component.html
@@ -6,26 +6,6 @@
     </p>
   </app-work-header>
 
-
-      <div class="swiper">
-      <!-- image -->
-      <swiper-container appSwiper #swiper [config]="swiperConfig" thumbs-swiper=".mySwiper2" (slidechange)="slideChange($event)" class="swiper-wrapper">
-        <swiper-slide *ngFor="let item of contents">
-          <div class="swiper-slide ratio ratio-4x3" [ngStyle]="{background: 'url(' + item.url +') no-repeat top center / contain'}"></div>
-        </swiper-slide>
-      </swiper-container>
-      <!-- /image -->
-
-      <!-- thumbnails -->
-      <swiper-container appSwiper #swiperThumbs [config]="swiperThumbsConfig" class="mySwiper2" *ngIf="contents.length > 1" class="swiper-wrapper">
-        <swiper-slide *ngFor="let item of contents" class="swiper-slide">
-          <div class="swiper-slide ratio ratio-4x3" role="button" [ngStyle]="{background: 'url(' + item.url +') center / cover'}"></div>
-        </swiper-slide>
-      </swiper-container>
-      <!-- /thumbnails -->
-      </div>
-      
-
   <section class="work-section">
     <h2 class="work-body-h2">
       Building a System with D3 and AmCharts
@@ -37,24 +17,17 @@
       Using a multi-step editor, a user could select an audience segment, criteria, and a graph type, and create a graph that could be customized or exported in a variety of ways.
     </p>
 
-<!--   <div class="gallery">
-    <a
-      *ngFor="let gallery of csDataVizImages; index as i"
-      class="glightbox"
-      [href]="gallery.path"
-      [attr.data-gallery]="'gallery' + (i + 1)"
-    >
-      <img class="image" [src]="gallery.path" alt="">
-    </a>
-  </div>
- -->
-<!--     <app-image-viewer
-      [images]="csDataVizImages"
-      path="../assets/images/work/crowdskout-data-viz/viz-4a.png"
-      description="A gallery of Crowdskout's analytics feature"
-      textColor="salmon"
-      [borderOn]="true">
-    </app-image-viewer> -->
+    <div class="gallery-subsection">
+      <lightgallery [settings]="settings" [onBeforeSlide]="onBeforeSlide" class="lg-wrapper-3">
+        <a *ngFor="let gallery of galleryContents; index as i" [href]="gallery.url" class="gallery-link" [attr.data-gallery]="'gallery' + (i + 1)">
+          <div class="gallery-image-container">
+            <img [alt]="gallery.description" [src]="gallery.url" class="gallery-image" />
+          </div>
+          <div class="gallery-description">{{gallery.description}}</div>
+        </a>
+      </lightgallery> 
+    </div>
+
     <p>
       Crowdskout's data visualization component is a complex, interactive module of the application. If you have any questions, I'm happy to walk through the design and code involved. Thanks for reading.
     </p>
