--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -42,6 +42,7 @@ line-height: 300px;
 @import './image-viewer';
 @import './work-header';
 @import './work-body';
+@import './gallery';
 
 // Pages
 @import './dashboard';
