--- a/src/app/work/work-items/crowdskout-form-editor/crowdskout-form-editor.component.html
+++ b/src/app/work/work-items/crowdskout-form-editor/crowdskout-form-editor.component.html
@@ -13,18 +13,18 @@
     <p>
       A Crowdskout user may use forms to ask any number of questions. These questions in turn can fuel the creating or updating of any of the hundreds of Crowdskout profile fields that exist in their database.
     </p>
-    <div class="work-body-image-grid">
-<!--       <app-image-viewer
-        path="../assets/images/work/crowdskout-form-editor/form-editor-1a.png"
-        description="A look at the field selection and questions on a Crowdskout form"
-        borderOn="true">
-      </app-image-viewer>
-      <app-image-viewer
-        path="../assets/images/work/crowdskout-form-editor/form-editor-2a.png"
-        description="Additional Crowdskout form fields"
-        borderOn="true">
-      </app-image-viewer> -->
+
+    <div class="gallery-subsection">
+      <lightgallery [settings]="settings" [onBeforeSlide]="onBeforeSlide" class="lg-wrapper-2">
+        <a *ngFor="let gallery of galleryContents; index as i" [href]="gallery.url" class="gallery-link" [attr.data-gallery]="'gallery' + (i + 1)">
+          <div class="gallery-image-container">
+            <img [alt]="gallery.description" [src]="gallery.url" class="gallery-image" />
+          </div>
+          <div class="gallery-description">{{gallery.description}}</div>
+        </a>
+      </lightgallery> 
     </div>
+
     <p>
       Crowdskout's form editor component is a complex, interactive module within the application. If you have any questions, I'm happy to walk through the design and code involved. Thanks for reading.
     </p>
