--- a/src/app/work/work-items/uw-yarn/uw-yarn.component.html
+++ b/src/app/work/work-items/uw-yarn/uw-yarn.component.html
@@ -19,10 +19,18 @@
     <p>
       At the outset of our project, the design of the Yarn application was complete, but we had to organize and run its usability study. I joined a team with three other students to help run the study and analyze our findings.
     </p>
-<!--     <app-image-viewer
-      path="../assets/images/work/uw-yarn/recruitment-photo.png"
-      description="Sharing DIY and running progress on Yarn">
-    </app-image-viewer> -->
+
+    <div class="gallery-subsection">
+      <lightgallery [settings]="settings" [onBeforeSlide]="onBeforeSlide" class="lg-wrapper-1">
+        <a *ngFor="let gallery of galleryContents; index as i" [href]="gallery.url" class="gallery-link" [attr.data-gallery]="'gallery' + (i + 1)">
+          <div class="gallery-image-container">
+            <img [alt]="gallery.description" [src]="gallery.url" class="gallery-image" />
+          </div>
+          <div class="gallery-description">{{gallery.description}}</div>
+        </a>
+      </lightgallery> 
+    </div>
+
     <p>
       We first spent some time familiarizing ourselves with the application. To contrast Yarn with an app like Runkeeper, Yarn focuses on building an extended narrative from many chapters, rather than on "individual" runs. Each run (e.g. 'Wednesday 5k') is added to an overall story (e.g. 'Training for the Boston Marathon'). The same would be true of a DIY project like building a chair.
     </p>
@@ -112,13 +120,5 @@
     </ul>
   </section>
 
-  <section class="work-section">
-    <h2 class="work-body-h2">
-      Analyzing our Findings
-    </h2>
-    <p>
-      During the period from March - June 2018, we'll be analyzing our findings. Check back soon for more information as we continue to update the publication under review.
-    </p>
-  </section>
 
 </article>
