--- a/src/scss/_era-detail.scss
+++ b/src/scss/_era-detail.scss
@@ -61,7 +61,7 @@
   transition: opacity 400ms cubic-bezier(0.6, 0.2, 0.1, 1), transform 400ms cubic-bezier(0.6, 0.2, 0.1, 1);
 }
 
-.grid-main .era-item:hover {
+.grid-main .era-detail-item:hover {
   cursor: pointer;
 }
 
