deploys functioning normally, css cleanup

--- a/src/scss/_dashboard.scss
+++ b/src/scss/_dashboard.scss
@@ -1,16 +1,4 @@
+/* Unused - this decorates a root-level homepage that's disabled */
+
 .dashboard-content {
-}
-
-.dashboard-image {
-  position: fixed;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  min-height: 100%;
-  z-index: -1;
-}
-
-.welcome {
-  font-size: 2em;
-  text-align: center;
 }
