--- a/src/scss/_era-detail.scss
+++ b/src/scss/_era-detail.scss
@@ -1,7 +1,7 @@
 .era-detail-content {
   width: 90%;
   margin: 0 auto;
-  padding: 0 2em;
+/*  padding: 0 2em;*/
 }
 
 .era-detail-main {
@@ -88,7 +88,6 @@
 .era-detail-item-image {
   max-width: 100%;
 }
-
 
 .era-detail-item-title {
   color: $nightrider;
