update ts landing styling

--- a/src/app/work/era-items/trakstar/trakstar.component.html
+++ b/src/app/work/era-items/trakstar/trakstar.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <!-- Yes, this is a farce. Reach out to me for a PW protected PDF of recent case studies. -->
-    <form class="pw-form">
+    <form class="pw-form era-detail-item">
       <div class="single-field">
         <label for="password">This page is password protected</label>
         <input type="text" [(ngModel)]="inputText" placeholder="Enter password">
