--- a/src/app/work/era-items/fleishman/fleishman.component.html
+++ b/src/app/work/era-items/fleishman/fleishman.component.html
@@ -3,7 +3,7 @@
 
     <div class="grid-header" id="scrollTop">
       <div class="era-detail-item header">
-        From 2011-2015, I worked for FleishmanHillard creative teams, ultimately leading VOX Global's video & motion design group. During my time with FH companies, I focused on brand strategy, design, and UX. 
+        From 2011-2015, I worked for FleishmanHillard creative teams. I worked across brand strategy, design, and UX, ultimately leading VOX Global's video & motion design group.
       </div>
     </div>
 
