--- a/src/app/work/era-items/fleishman/fleishman.component.html
+++ b/src/app/work/era-items/fleishman/fleishman.component.html
@@ -3,7 +3,7 @@
 
     <div class="grid-header" id="scrollTop">
       <div class="era-detail-item header">
-        From 2011-2015, I worked for FleishmanHillard creative teams. I worked across brand strategy, design, and UX, ultimately leading VOX Global's video & motion design group.
+        From 2011-2015, I worked for a range of <a class="basic-link" target="_blank" href="https://fleishmanhillard.com/">FleishmanHillard</a> creative teams. I worked across brand strategy, design, and UX, ultimately leading VOX Global's video & motion design group.
       </div>
     </div>
 
