--- a/src/app/work/era-items/crowdskout/crowdskout.component.html
+++ b/src/app/work/era-items/crowdskout/crowdskout.component.html
@@ -3,7 +3,7 @@
 
     <div class="grid-header" id="scrollTop">
       <div class="era-detail-item header">
-        From 2015-2017, I worked for Crowdskout as a founding software engineer. Crowdskout provided CRM tools to political and advocacy campaigns, and I specialized in developing its systems for audience segmenting, analytics, and data visualization. Crowdskout was acquired by <a class="basic-link" target="_blank" href="https://murmuration.org">Murmuration</a> in 2018.</div>
+        From 2015-2017, I worked for Crowdskout as a founding software engineer, where we made CRM tools for political and advocacy campaigns. I specialized in developing its systems for audience segmenting, analytics, and data visualization. Crowdskout was acquired by <a class="basic-link" target="_blank" href="https://murmuration.org">Murmuration</a> in 2018.</div>
     </div>
 
     <div class="grid-main">
